# Personal-Coach

./: .gitignore  README.md
backend/: .env.dev  app.db.backup_20250703_223806  app.py  auth.py  config.py  models.py  prompts.json  pyproject.toml  update_db.py  utils.py
backend/prompts/: book_discussion.md  book_summary.md  conversation_summary.md  initial_call_prompt.md  memory_extraction.md  recommendations.md  system_prompt.md  title_generation.md
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/Chat/: ChatSection.tsx
frontend/src/components/ConfirmDialog/: ConfirmDialog.css  ConfirmDialog.tsx
frontend/src/components/ContextMenu/: ContextMenu.css  ContextMenu.tsx
frontend/src/components/Goals/: GoalsSection.tsx
frontend/src/components/InterviewPending/: InterviewPending.tsx
frontend/src/components/Material/: Material.tsx
frontend/src/components/Notes/: NotesSection.tsx
frontend/src/components/Settings/: Settings.tsx
frontend/src/components/Sidebar/: Sidebar.tsx
